# IIT-CS525

./: .gitignore  README.md  b_tree.md  b_tree_operations.md  bptree.md  bptree_operations.md  schedule_classes.md
.ical/: classes.ics  exam1.ics  exam2.ics
assign1/: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  assign1  dberror.c  dberror.cpp  dberror.h  hierarchy.drawio  storage_mgr.c  storage_mgr.cpp  storage_mgr.h  test_assign1_1.c  test_assign1_1.cpp  test_helper.h  test_helpers.h
assign2/: CMakeLists.txt  Makefile  README.md  buffer_mgr.c  buffer_mgr.h  buffer_mgr_stat.c  dberror.c  dberror.h  hierarchy.drawio  storage_mgr.c  storage_mgr.h  test_assign2_1.c  test_assign2_2.c  test_helper.h
assign3/: CMakeLists.txt  Makefile  README.md  buffer_mgr.c  buffer_mgr.h  buffer_mgr_stat.c  dberror.h  hierarchy.drawio  interactive.c  record_mgr.c  record_mgr.h  rm_serializer.c  rm_serializer.h  storage_mgr.c  tables.h  test_assign3_1.c  test_expr.c
assignment 1/: Makefile  dberror.h  storage_mgr.c  test_assign1  test_assign1_1.c
assignments/: exam1.md  quiz1.md
